Fix table layout when cell content doesn't fit (#413)

--- a/css/main.less
+++ b/css/main.less
@@ -520,6 +520,7 @@ textarea {
                 box-sizing: border-box;
                 border: none;
                 text-align: left;
+                overflow: hidden;
             }
         }
 
